# music-skills

./: .gitignore  LICENSE  QUICKREF.md  README.md  init_github.sh  pyproject.toml  requirements.txt  setup.sh
music_skills/: __init__.py
music_skills/cli/: main.py  song_downloader.py
music_skills/config/: __init__.py  config.py
music_skills/inference/: __init__.py  rvc_inference.py
music_skills/merging/: __init__.py  audio_merger.py
music_skills/preprocessing/: __init__.py  audio.py
music_skills/separation/: __init__.py  uvr_separator.py
music_skills/training/: __init__.py  rvc_trainer.py
tests/: __init__.py  test_core.py
